# react-native-reanimated

./: createNPMPackage.sh
android/: CMakeLists.txt  build.gradle
android-npm/: build.gradle
android/src/main/cpp/: NativeProxy.cpp
